@@ -1,5 +1,9 @@
 2000-01-21  Kenichi OKADA <okada@opaopa.org>
 
+	* smtp.el (TopLevel): Eval `sasl' when compile.
+
+2000-01-21  Kenichi OKADA <okada@opaopa.org>
+
 	* sasl.el (TopLevel): Delete function `sasl-digest-md5-parse-digest-challenge'.
 	* smtp.el (smtp-auth-digest-md5): Don't use `sasl-digest-md5-parse-digest-challenge'.
 
